Add assembly metadata.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     }
   ],
   "main": "./index.js",
+  "assembly": {
+    "namespace": "uis",
+    "components": [
+      "main"
+    ]
+  },
   "devDependencies": {
     "make-node": "^0.3.0",
     "mocha": "^2.0.0",
